dnako.dpr


function nako_group_findMember(group: PHiValue; memberName: PAnsiChar): PHiValue; stdcall; // グループ変数groupのメンバmemberNameを検索する
var
  vid: DWORD;
  s: AnsiString;
begin
  s := memberName;
  s := DeleteGobi(s);
  vid := hi_tango2id(s);
  group := hi_getLink(group);
  Result := hi_group(group).FindMember(vid);
end;

function nako_group_exec(group: PHiValue; memberName: PAnsiChar): PHiValue; stdcall; // グループ変数groupのメンバmemberNameがイベントならば実行し結果を返す
begin
  Result := HiSystem.RunGroupEvent(group, hi_tango2id(DeleteGobi(memberName)));
end;

function nako_debug_nadesiko(p: PAnsiChar; len: DWORD): DWORD; stdcall; // nako_loadした構文木を再度ソースに変換する
var s: AnsiString;
begin
  s := HiSystem.DebugProgramNadesiko;
  Result := Length(s);
  StrLCopy(PAnsiChar(s), p, len);
end;

procedure nako_ary_create(p: PHiValue); stdcall; // p を配列として生成する
begin
  hi_ary_create(p);
end;

procedure nako_ary_add(ary, val: PHiValue); stdcall; // p を配列として生成する
begin
  hi_ary(ary).Add(val);
end;

procedure nako_check_tag(tag:Integer; name: DWORD); stdcall; // 命令タグが重複してないかチェック
begin
  _checkTag(tag, name);
end;

procedure nako_DebugNextStop; stdcall; // 次の命令で終了する
begin
  HiSystem.DebugNextStop := True;
end;

procedure nako_LoadPlugins; stdcall; // プラグインを取り込む
begin
  HiSystem.LoadPlugins;
end;

function nako_openPackfile(fname: PAnsiChar): Integer; stdcall; // 実行ファイル fname のパックファイルを開く。失敗なら、0を返す。
begin
  errLog('nako_openPackfile:' + AnsiString(fname));
  if OpenPackFile(string(AnsiString(fname))) then
  begin
    FileMixReader.autoDelete := True;
    Result := Integer(FileMixReader);
  end else
  begin
    Result := 0;
  end;
end;

function nako_runPackfile: DWORD; stdcall; // nako_openPackfile で開いたファイルにある nadesiko.nako を開いて実行する。失敗は、nako_NGを返す。
var
  src: AnsiString;
begin
  Result := nako_NG;

  if FileMixReader = nil then Exit;
  try
    if not FileMixReader.ReadFileAsString('nadesiko.nako', src) then Exit;
  except
    on e:Exception do begin
      errLog('nako_runPackfile.load.error:' + AnsiString(e.Message));
      Exit;
    end;
  end;
  try
    HiSystem.MainFileNo := HiSystem.LoadSourceText(src, 'nadesiko.nako');
  except
    on e:Exception do begin
      errLog('nako_runPackfile.run.error:' + AnsiString(e.Message));
      Exit;
    end;
  end;
  Result := nako_OK;
end;

function nako_openPackfileBin(packname: PAnsiChar): Integer; stdcall; // packname のパックファイルを開く。失敗なら、0を返す。
begin
  errLog('nako_openPackfileBin:' + AnsiString(packname));

  try
    unit_pack_files.FileMixReader := TFileMixReader.Create(string(AnsiString(packname)));
    unit_pack_files.FileMixReader.autoDelete := True;
    unit_pack_files.FileMixReaderSelfCreate := True;
    Result := Integer(unit_pack_files.FileMixReader);
  except
    Result := 0;
  end;
end;


function nako_closePackfile(dummy: PAnsiChar): Integer; stdcall; // 実行ファイルのパックファイルを閉じる（後片付け）。失敗なら、0を返す。
begin
  if FileMixReader <> nil then
  begin
    errLog('nako_closePackfile:' + AnsiString(FileMixReader.TempFile));
    try
      FreeAndNil(FileMixReader);
    except
    end;
  end;
  Result := 0;
end;


function nako_getPackFileHandle: Integer; stdcall; // 実行ファイルにした時、パックファイルの操作に必要な、TMixFileReaderのハンドルを返す。
begin
  Result := Integer(FileMixReader);
end;

procedure nako_setPackFileHandle(handle: DWORD); stdcall; // 実行ファイルにした時で、実行ファイル側でパックファイルを開いた場合この関数を呼ぶ
begin
  unit_pack_files.FileMixReader := TFileMixReader(Integer(handle));
end;

procedure nako_makeReport(fname: PAnsiChar); stdcall; // 取り込んだファイル、プラグインのレポートを作成する
var
  s: AnsiString;
  path: string;
begin
  s := HiSystem.makeDllReport;
  path := ExtractFilePath(fname);
  ForceDirectories(path);
  FileSaveAll(s, fname);
end;

procedure nako_reportDLL(fname: PAnsiChar); stdcall; // DLLを利用したことを明示する..レポートに加える
begin
  HiSystem.plugins.addDll(string(AnsiString(fname)));
end;

function nako_hasPlugins(dllName: PAnsiChar): BOOL; stdcall; // 指定したプラグインが使われているか？
var
  i: Integer;
  f: AnsiString;
  s: string;
  dll: AnsiString;
begin
  Result := False;
  dll := AnsiString(dllName);
  dll := UpperCaseEx(dll);

  for i := 0 to HiSystem.plugins.Count - 1 do
  begin
    s := THiPlugin(HiSystem.plugins.Items[i]).FullPath;
    s := (ExtractFileName(s));
    f := UpperCaseEx(AnsiString(s));
    if f = dll then
    begin
      Result := True;
      Break;
    end;
  end;
end;

procedure nako_hash_create(v: PHiValue); stdcall; // 値vをハッシュ形式に変換する
begin
  hi_hash_create(v);
end;
function nako_hash_get(hash: PHiValue; key: PAnsiChar): PHiValue; stdcall; // hashのkeyの値を取得する
begin
  hi_hash_create(hash);
  Result := hi_hash_get(hash, key);
end;
procedure nako_hash_set(hash: PHiValue; key: PAnsiChar; value: PHiValue); stdcall; // hashのkeyにvalueを設定する
begin
  hi_hash_create(hash);
  hi_hash_set(hash, key, value);
end;
function nako_hash_keys(hash: PHiValue; s: PAnsiChar; len: Integer): Integer; stdcall; // hashのkey一覧を得る
var
  list: AnsiString;
begin
  hi_hash_create(hash);
  list := hi_hash(hash).EnumKeys;
  StrLCopy(s, PAnsiChar(list), len);
  Result := Length(list);
end;

procedure nako_getLineNo(fileNo, lineNo: PInteger); stdcall; // 現在の実行行を得る
begin
  // ---
  fileNo^ := HiSystem.LastFileNo; // error
  lineNo^ := HiSystem.LastLineNo;
  //
end;

function nako_getSourceText(fileNo: Integer; s: PAnsiChar; len: DWORD): DWORD; stdcall; // 現在の実行行を得る
var
  txt: AnsiString;
begin
  txt := HiSystem.GetSourceText(fileNo);
  Result := Length(txt);
  if len > 0 then StrLCopy(s, PAnsiChar(txt), len);
end;

function nako_getFilename(fileNo: Integer; outstr: PAnsiChar; len: DWORD): DWORD; stdcall; // fileno からファイル名を得る
var
  f: THimaFile;
  s: AnsiString;
begin
  f := HiSystem.TokenFiles.FindFileNo(fileNo);
  s := AnsiString(f.Path + f.Filename);
  if len > 0 then StrLCopy(outstr, PAnsiChar(s), len);
  Result := nako_OK;
end;

procedure nako_pushRunFlag; // イベントの実行前に実行フラグを退避しておきたいときに使う
begin
  HiSystem.PushRunFlag;
end;

procedure nako_popRunFlag; // イベントの実行前に実行フラグを退避したものを戻すときに使う
begin
  HiSystem.PopRunFlag;
end;

function nako_callSysFunction(func_id:DWORD; args: PHiValue):PHiValue; stdcall; // なでしこのシステム関数をIDを指定して呼ぶ
var
  p: PHiValue;
  HiFunc: THiFunction;
  a: THiArray;
begin
  Result := nil;
  if (args = nil) then
  begin
    a := THiArray.Create;
  end else
  begin
    a := THiArray(args.ptr);
  end;
  p := HiSystem.Namespace.GetVar(func_id);
  if p = nil then Exit;
  if p.VType = varFunc then
  begin
    HiFunc := p.ptr;
    try
      Result := THimaSysFunction(HiFunc.PFunc)(a);
    finally
    end;
  end;
end;

procedure nako_setDNAKO_DLL_handle(h: DWORD); stdcall; // dnako.dll をロードしたときに、そのハンドルをセットする
begin
  dnako_dll_handle := h;
end;

procedure nako_setPluginsDir(path: PAnsiChar); stdcall; // plug-ins フォルダを指定する
begin
  HiSystem.PluginsDir := string(path);
end;

function nako_getPluginsDir(): PAnsiChar; stdcall; // plug-ins フォルダを取得する
begin
  Result := PAnsiChar(AnsiString(HiSystem.PluginsDir));
end;

procedure test; stdcall; // テスト
begin
  HiSystem.Test;
end;

function nako_getVersion(): PAnsiChar; stdcall; // なでしこのバージョンを文字列で得る
begin
  Result := PAnsiChar(NADESIKO_VER);
end;

function nako_getUpdateDate(): PAnsiChar; stdcall; // なでしこの更新日を文字列で得る
begin
  Result := PAnsiChar(NADESIKO_DATE);
end;

function nako_getNADESIKO_GUID(): PAnsiChar; stdcall; // なでしこのGUIDを返す
begin
  Result := PAnsiChar(NADESIKO_GUID);
end;

function nako_getEmbedFile(find_file: PAnsiChar; outfile: PAnsiChar; len: DWORD): BOOL; stdcall; // 実行ファイルに埋め込まれたリソースがあればファイルを返す
var
  f, org: AnsiString;
begin
  Result := False;
  org := AnsiString(find_file);
  f := org;
  if getEmbedFile(f) then
  begin
    StrLCopy(outfile, PAnsiChar(f), len);
    Result := True;
  end;
end;

function nako_getLastUserFuncID():DWORD; stdcall;// 最後に実行したユーザー関数を得る
begin
  Result := LastUserFuncID;
end;

function nako_checkLicense(license_name:PAnsiChar; license_code:PAnsiChar): DWORD; stdcall;// ライセンスされているか確認する
var
  path: AnsiString;
  code: AnsiString;
begin
  Result := nako_NG;
  path := AnsiString(AppDataDir) + 'com.nadesi.dll.dnako\license\';
  path := path + AnsiString(license_name);
  if not FileExists(string(path)) then Exit;
  code := FileLoadAll(path);
  if AnsiString(license_code) = code then
  begin
    Result := nako_OK;
  end;
end;

function nako_registerLicense(license_name:PAnsiChar; license_code:PAnsiChar): DWORD; stdcall;// ライセンスコードを書き込む
var
  path: AnsiString;
begin
  Result := nako_NG;
  try
    path := AnsiString(AppDataDir) + 'com.nadesi.dll.dnako\license\';
    ForceDirectories(string(path));
    path := path + AnsiString(license_name);
    FileSaveAll(AnsiString(license_code), path);
    Result := nako_OK;
  except
    Exit;
  end;
end;

///<DNAKOAPI:END>


exports
  nako_getVersion,
  nako_getUpdateDate,
  nako_resetAll,
  nako_free,
  nako_load,
  nako_loadSource,
  nako_run,
  nako_run_ex,
  nako_getError,
  nako_eval,
  nako_evalEx,
  nako_addFileCommand,
  nako_getVariable,
  nako_setVariable,
  nako_addFunction,
  nako_addFunction2,
  nako_getSore,
  nako_id2tango,
  nako_tango2id,
  nako_var2str,
  nako_var2int,
  nako_var2double,
  nako_var2extended,
  nako_str2var,
  nako_int2var,
  nako_double2var,
  nako_var_new,
  nako_getFuncArg,
  nako_addIntVar,
  nako_addStrVar,
  nako_varCopyData,
  nako_varCopyGensi,
  nako_getGroupMember,
  nako_stop,
  nako_continue,
  nako_setMainWindowHandle,
  nako_getMainWindowHandle,
  nako_addSetterGetter,
  nako_setDebugEditorHandle,
  nako_setDebugLineNo,
  nako_group_create,
  nako_group_addMember,
  nako_group_findMember,
  nako_group_exec,
  nako_debug_nadesiko,
  nako_ary_create,
  nako_ary_add,
  nako_check_tag,
  nako_DebugNextStop,
  nako_var_clear,
  nako_var2cstr,
  nako_LoadPlugins,
  nako_var_free,
  nako_bin2var,
  nako_openPackfile,
  nako_runPackfile,
  nako_closePackfile,
  nako_openPackfileBin,
  nako_getPackFileHandle,
  nako_makeReport,
  nako_hasPlugins,
  nako_hash_create,nako_hash_get,nako_hash_set,nako_hash_keys,
  nako_getLineNo,
  nako_getSourceText,
  nako_error_continue,
  nako_ary_get,
  nako_ary_getCsv,
  nako_ary_count,
  nako_hasEvent,
  nako_pushRunFlag,
  nako_popRunFlag,
  nako_callSysFunction,
  nako_reportDLL,
  nako_setPackFileHandle,
  nako_setDNAKO_DLL_handle,
  nako_getPluginsDir,
  nako_setPluginsDir,
  nako_clearError,
  nako_getNADESIKO_GUID,
  nako_getEmbedFile,
  nako_getFilename,
  nako_getLastUserFuncID,
  nako_checkLicense,
  nako_registerLicense,
  nako_getVariableFromId,
  test;
  
begin
end.
 